Fixed issues found by findBugs.